--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -4,6 +4,7 @@ body {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f4f6f8;
 }
 
 code {
